--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css" />
     <style>
       .welcome-message {
-        color: #3498db;
+        color: #a854e7c9;
         text-align: center;
         animation: fadeIn 2s;
       }
@@ -17,7 +17,7 @@
     <header>
       <nav>
         <ul>
-          <li><a href="index.html">Home</a></li>
+          <li><a href="index.html" style="background-color: rgb(236, 109, 109);">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="contact.html">Contact Us</a></li>
         </ul>
