--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header>
       <nav>
         <ul>
-          <li><a href="index.html" style="background-color: rgb(236, 109, 109);">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="contact.html">Contact Us</a></li>
         </ul>
@@ -25,7 +25,7 @@
     </header>
     <main>
       <section class="welcome-message">
-        <h1>Welcome to My Creative Website</h1>
+        <h1 style="background-color: bisque; color: rgb(38, 23, 241);">Welcome to My Creative Website</h1>
         <p>My name is Jn Francois Pierre. <br>This is a simple website created for a skill-based assessment.</p>
         <img
           src="https://images.unsplash.com/photo-1605639743310-db006cc1b95a?w=800&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTR8fGJlYXV0aWZ1bCUyMHNjZW5lcnl8ZW58MHx8MHx8fDA%3D"
