color and @keyframe

--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
       </nav>
     </header>
     <main>
-      <section>
+      <section class="colorborder">
         <h1>About Us</h1>
         <p>Here is some information about our website.</p>
         <table>
