adding Mariokart to the about us page

--- a/about.html
+++ b/about.html
@@ -36,6 +36,17 @@
         </table>
       </section>
     </main>
+    <div class="mario">
+      <img
+        src="https://www.kroger.com/product/images/large/right/0019473501899"
+        width="170px"
+        alt="mario kart"
+      style="margin-right: 10px;"/>
+      <img
+        src="https://image.smythstoys.com/thumbnail/desktop/187046_3.webp"
+        alt=""
+      />
+    </div>
     <footer>
       <p>&copy; 2024 JFP Creative Website</p>
     </footer>
