--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
         <h1 class="welcome" style="background-color: bisque; color: rgb(38, 23, 241);">
           Welcome to My Creative Website
         </h1>
-        <p>
+        <p style="color: red;">
           My name is Jn Francois Pierre. <br />This is a simple website created
           for a skill-based assessment.
         </p>
         <img
           src="https://images.unsplash.com/photo-1605639743310-db006cc1b95a?w=800&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTR8fGJlYXV0aWZ1bCUyMHNjZW5lcnl8ZW58MHx8MHx8fDA%3D"
           alt="Beautiful Scenery"
-        />
+         />
         <img
           src="https://media2.giphy.com/media/mWWTPf928UKysZgtgw/giphy.gif"
           alt="Happy GIF"
