--- a/contact.html
+++ b/contact.html
@@ -58,6 +58,14 @@
         </form>
       </section>
     </main>
+    <div>
+      <p class="lastP">
+        Thank you for visiting my website. Your support and interest mean the
+        world to me. I look forward to connecting with you and sharing more of
+        my journey as I continue to learn, grow, and strive to become a better
+        coder.
+      </p>
+    </div>
     <footer>
       <p>&copy; 2024 JFP Creative Website</p>
     </footer>
