--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           alt="Beautiful Scenery"
          />
         <img
-          src="https://media2.giphy.com/media/mWWTPf928UKysZgtgw/giphy.gif"
+          src="https://media2.giphy.com/media/mWWTPf928UKysZgtgw/giphy.gif" style="width: 800px; height: 533px;"
           alt="Happy GIF"
         />
       </section>
