--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       }
     </style>
   </head>
-  <body>
+  <body class="body">
     <header>
       <nav>
         <ul>
@@ -24,6 +24,7 @@
       </nav>
     </header>
     <main>
+      
       <section class="welcome-message">
         <h1 class="welcome" style="background-color: bisque; color: rgb(38, 23, 241);">
           Welcome to My Creative Website
@@ -41,6 +42,7 @@
           alt="Happy GIF"
         />
       </section>
+      
     </main>
     <footer>
       <p>&copy; 2024 JFP Creative Website</p>
