--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <title>About Us</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
-  <body>
+  <body class="body">
     <header>
       <nav>
         <ul>
